[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/perfectdosvga437.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sprites/duif.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
outline_size = 3
font_data = ExtResource( 2 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.976471, 0.431373, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.694118, 1, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 300.0
margin_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 148.0
margin_bottom = 160.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 148.0
margin_bottom = 78.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 148.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 148.0
margin_bottom = 160.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 29.0
margin_top = 2.0
margin_right = 119.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 4 )
text = "Space \\/
(ВВЕРХ)
X/SLASH \\/
(СТРЕЛЯТЬ)"

[node name="Menu" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 160.0
size_flags_horizontal = 3
alignment = 1

[node name="Start" type="Button" parent="MarginContainer/HBoxContainer/Menu"]
margin_top = 30.0
margin_right = 148.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.2, 0.141176, 0.270588, 1 )
custom_colors/font_color_focus = Color( 0.32549, 0.345098, 0.572549, 1 )
custom_colors/font_color = Color( 0.384314, 0.756863, 0.12549, 1 )
custom_colors/font_color_hover = Color( 0.337255, 0.360784, 0.631373, 1 )
custom_colors/font_color_pressed = Color( 0.184314, 0.309804, 0.4, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Начать"
flat = true

[node name="Music" type="Button" parent="MarginContainer/HBoxContainer/Menu"]
margin_top = 56.0
margin_right = 148.0
margin_bottom = 78.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.2, 0.141176, 0.270588, 1 )
custom_colors/font_color_focus = Color( 0.32549, 0.345098, 0.572549, 1 )
custom_colors/font_color = Color( 0.384314, 0.756863, 0.12549, 1 )
custom_colors/font_color_hover = Color( 0.337255, 0.360784, 0.631373, 1 )
custom_colors/font_color_pressed = Color( 0.184314, 0.309804, 0.4, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "МУЗЫКА"
flat = true

[node name="Credits" type="Button" parent="MarginContainer/HBoxContainer/Menu"]
margin_top = 82.0
margin_right = 148.0
margin_bottom = 104.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.0117647, 0.0117647, 1 )
custom_colors/font_color = Color( 0.537255, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Титры"
flat = true

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/Menu"]
margin_top = 108.0
margin_right = 148.0
margin_bottom = 130.0
focus_mode = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "ВЫЙТИ"
flat = true

[node name="Start" type="TextureButton" parent="."]
margin_left = -138.0
margin_top = -20.0
margin_right = -138.0
margin_bottom = -20.0

[node name="Settings" type="TextureButton" parent="."]
margin_left = -138.0
margin_top = -20.0
margin_right = -98.0
margin_bottom = 20.0

[node name="Credits" type="TextureButton" parent="."]
margin_left = -138.0
margin_top = -20.0
margin_right = -98.0
margin_bottom = 20.0

[node name="Quit" type="TextureButton" parent="."]
margin_left = -138.0
margin_top = -20.0
margin_right = -98.0
margin_bottom = 20.0

[connection signal="button_up" from="MarginContainer/HBoxContainer/Menu/Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Menu/Music" to="." method="_on_Music_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Menu/Credits" to="." method="_on_Credits_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Menu/Quit" to="." method="_on_Quit_button_up"]
[connection signal="button_up" from="Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="Settings" to="." method="_on_Settings_button_up"]
[connection signal="button_up" from="Credits" to="." method="_on_Credits_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_Quit_button_up"]
